--- a/index.html
+++ b/index.html
@@ -33,21 +33,20 @@
                 <p class="error" id="error-edad"></p>
             </div>
 
-            <div class="botones-contenedor"> <button id="btnGuardar">Guardar</button>
+            <div class="botones-contenedor"> 
+                <button id="btnGuardar">Guardar</button>
                 <button id="btnVerDatos">Ver Datos</button>
                 <button id="btnLimpiarFormulario">Limpiar Formulario</button>
                 <button id="btnBorrarDatos">Borrar Datos</button>
             </div>
         </section>
 
-        <section class="resultado hidden"> <h3>Datos Guardados:</h3>
-            <div id="resultado-datos">
-                <p><strong>Nombre:</strong> <span id="res-nombre"></span></p>
-                <p><strong>Email:</strong> <span id="res-email"></span></p>
-                <p><strong>Edad:</strong> <span id="res-edad"></span></p>
-            </div>
+        <section class="resultado hidden">
+            <h3>Usuarios Guardados:</h3>
+            <div id="lista-usuarios-contenedor">
+                </div>
         </section>
-    </main>
+        </main>
 
     <footer>
         <p>&copy; 2024 Mini Portal. Todos los derechos reservados.</p>
